--- a/event-platform-frontend/src/styles.css
+++ b/event-platform-frontend/src/styles.css
@@ -1,6 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
     .custom-snackbar {
-  background-color: #323232; /* dark gray */
+  background-color: #323232; 
   color: #fff;
   font-weight: 500;
 }
