--- a/event-platform-frontend/src/app/auth/login/login.css
+++ b/event-platform-frontend/src/app/auth/login/login.css
@@ -34,7 +34,7 @@ button[mat-raised-button] {
   font-size: 16px;
   font-weight: 600;
   border-radius: 8px;
-  background-color: #ff3d00; 
+  background-color: #e33b0d; 
   color: #ffffff;
   transition: all 0.3s ease;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
