--- a/event-platform-frontend/src/app/events/event-details/event-details.html
+++ b/event-platform-frontend/src/app/events/event-details/event-details.html
@@ -13,6 +13,7 @@
                 <p><strong>Date:</strong> {{ event.date | date: 'mediumDate' }}</p>
                 <p><strong>Location:</strong> {{ event.location }}</p>
                 <p><strong>Description:</strong> {{ event.description }}</p>
+                <p><strong>Price:</strong> ₹{{ event.price }}</p>
 
                 <!-- Static Rating -->
                 <div class="rating">
