--- a/event-platform-frontend/src/app/user-bookings/user-bookings.css
+++ b/event-platform-frontend/src/app/user-bookings/user-bookings.css
@@ -17,3 +17,18 @@ button {
   margin-top: 20px;
   align-self: center;
 }
+
+
+.back-btn {
+  background-color: #000;
+  color: #fff;
+  font-weight: bold;
+  padding: 10px 20px;
+  border-radius: 8px;
+  transition: background 0.2s, transform 0.2s;
+}
+
+.back-btn:hover {
+  background-color: #333;
+  transform: scale(1.05);
+}
