--- a/event-platform-frontend/src/app/user-bookings/user-bookings.html
+++ b/event-platform-frontend/src/app/user-bookings/user-bookings.html
@@ -8,10 +8,11 @@
             <p><strong>Event:</strong> {{ booking.eventName }}</p>
             <p><strong>Total Seats:</strong> {{ booking.totalSeats }}</p>
             <p><strong>Booked Seats:</strong> {{ booking.bookedSeats }}</p>
+            <p><strong>Total Price:</strong> ₹{{ booking.price * booking.totalSeats }}</p>
         </mat-card>
     </div>
 
-    <button mat-raised-button color="primary" routerLink="/events">
+    <button mat-raised-button class="back-btn" color="primary" routerLink="/events">
         Back to Events
     </button>
 </div>
