--- a/event-platform-frontend/src/app/events/event-details/event-details.css
+++ b/event-platform-frontend/src/app/events/event-details/event-details.css
@@ -51,7 +51,7 @@
 .event-image-left {
   width: 250px;
   height: 250px;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 12px;
   margin-right: 30px;
 }
