--- a/event-platform-frontend/src/app/events/seat-booking/seat-booking.css
+++ b/event-platform-frontend/src/app/events/seat-booking/seat-booking.css
@@ -18,7 +18,7 @@
 .seat {
 	width: 74px;
 	height: 36px;
-	padding: 0;
+	padding: 5px;
 	margin: 4px 6px;
 	border: 2px solid #81053a;
 	background: #fcfdfc;
@@ -92,25 +92,24 @@
 
 .confirm-btn {
   display: block;
-  margin: 20px auto 0;  
-  padding: 10px 22px;
-  font-size: 1rem;
-  font-weight: 600;
-  color: #121111;         
-  background: #ffffff;    
-  border: 2px solid #750627; 
-  border-radius: 12px;
+  margin: 20px auto 20px;   
+  padding: 12px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  color: white; 
+  background: linear-gradient(to right, #ff416c, #ff4b2b); 
+  border: 2px solid #ff416c; 
+  border-radius: 8px; 
   cursor: pointer;
-  transition: all 0.3s ease;
+  transition: transform 0.2s, box-shadow 0.2s;
   box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
 
 .confirm-btn:hover {
-  background: #910747;   
-  color: #fff;           
   transform: translateY(-2px);
   box-shadow: 0 6px 14px rgba(0,0,0,0.2);
 }
+
 
 .theater-screen {
   width: 80%; 
@@ -134,4 +133,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.back-btn {
+  background-color: #000;
+  color: #fff;
+  font-weight: bold;
+  padding: 10px 20px;
+  border-radius: 8px;
+  transition: background 0.2s, transform 0.2s;
+}
+
+.back-btn:hover {
+  background-color: #333;
+  transform: scale(1.05);
 }
