--- a/event-platform-frontend/src/app/user-bookings/user-bookings.html
+++ b/event-platform-frontend/src/app/user-bookings/user-bookings.html
@@ -9,10 +9,14 @@
             <p><strong>Total Seats:</strong> {{ booking.totalSeats }}</p>
             <p><strong>Booked Seats:</strong> {{ booking.bookedSeats }}</p>
             <p><strong>Total Price:</strong> ₹{{ booking.price * booking.totalSeats }}</p>
+
+            <button mat-raised-button color="warn" class="cancel-btn" (click)="cancelBooking(booking.eventId)">
+                Cancel Booking
+            </button>
         </mat-card>
     </div>
 
-    <button mat-raised-button class="back-btn" color="primary" routerLink="/events">
+    <button mat-raised-button color="primary" class="back-btn" routerLink="/events">
         Back to Events
     </button>
 </div>
